# ChatX

./: .coverage  .env  Dockerfile  config.py  main.py  pyproject.toml
src/: pages.py
src/chat/: chat.py
src/data/: repository.py
src/service_layer/: exception.py  servicies.py
src/web/: web_chat.py
templates/: base.html  chat.html  index.html
templates/assets/css/: styles.css
templates/assets/html/forms/: join_chat.html  join_or_create.html
templates/assets/js/: chat.js
tests/units/: test_base.py  test_services.py
