[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["LordGvozd <zehapo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = "^0.27.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
